--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             
             <div class="dashboard-min-img" data-tooltip="Marketplace">
-                <img src="/black-icons/marketplaceshop-icon.svg" alt="Marketplace icon">
+                <img src="/black-icons/marketplace-icon.svg" alt="Marketplace icon">
             </div>
         </div>
 
@@ -53,7 +53,7 @@
                 <img src="/black-icons/tags-icons.svg" alt="tags icon">
             </div>
             <div class="performance-min-img" data-tooltip="Members">
-                <img src="/black-icons/members-team-icon.svg" alt="members icon">
+                <img src="/black-icons/team-icon.svg" alt="members icon">
             </div>
 
             <div class="performance-min-img" data-tooltip="Design">
@@ -88,7 +88,7 @@
             </div>
 
             <div class="marketplace">
-                <img src="/black-icons/marketplaceshop-icon.svg" alt="Marketplace icon">
+                <img src="/black-icons/marketplace-icon.svg" alt="Marketplace icon">
                 <p>Marketplace</p>
             </div>
         </div>
@@ -113,19 +113,16 @@
             </div>
 
             <div class="drafts">
-                <img src="" alt="">
                 <p>Drafts</p>
                 <div class="draft-number"><p>10</p></div>
             </div>
 
             <div class="scheduled">
-                <img src="" alt="">
                 <p>Scheduled</p>
                 <div class="scheduled-number"><p>2</p></div>
             </div>
 
             <div class="published">
-                <img src="" alt="">
                 <p>Published</p>
                 <div class="published-number"><p>28</p></div>
             </div>
@@ -151,7 +148,7 @@
             </div>
 
             <div class="members">
-                <img src="/black-icons/members-team-icon.svg" alt="members icon">
+                <img src="/black-icons/team-icon.svg" alt="members icon">
                 <p>Members</p>
             </div>
 
